@@ -1,13 +1,16 @@
 // Example program to test alpha_s calculation
 
 #include "LHAPDF/AlphaS.h"
+#include "LHAPDF/Factories.h"
+
 #include <iostream>
 #include <fstream>
+
 using namespace LHAPDF;
 using namespace std;
 
+
 int main() {
-  //AlphaS_ODE as_ode;
   AlphaS_Analytic as_ana;
 
   as_ana.setQmass(1, 0.0017);
@@ -27,7 +30,8 @@ int main() {
     const double as_ana_q = as_ana.alphasQ(q);
     //cout << "alpha_s(Q=" << q << ")_ana = " << as_ana_q << endl;
     fa << q << " " << as_ana_q << endl;
-    cout << "Q= " << q << " nf= " << as_ana.nf_Q(q) << endl;
+    cout << "Q = " << setprecision(1) << fixed << q
+         << ",  nf = " << as_ana.nf_Q(q) << endl;
     //const double as_ode_q = as_ode.alphasQ(q);
     //cout << "alpha_s(Q=" << q << ")_ODE = " << as_ode_q << endl;
     //fo << q << " " << as_ode_q << endl;
